force-app/main/default/objects/Price_list_item__c/Price_list_item__c.object-meta.xml
<CustomObject>
    <label>Price List Item</label>
    <nameField>
        <label>Price list items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price List Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>