force-app/main/default/objects/Price_list_item__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show in FormAssembly picklist values</description>
    <inlineHelpText>Show in FormAssembly picklist values</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>