force-app/main/default/objects/Price_list_item__c/fields/Full_name__c.field-meta.xml
<CustomField>
    <fullName>Full_name__c</fullName>
    <formula>TEXT(Price_List_Item_Category__c)+ &quot; - &quot; + Name</formula>
    <label>Full name</label>
    <type>Text</type>
</CustomField>