force-app/main/default/objects/Price_list_item__c/fields/PLCategory__c.field-meta.xml
<CustomField>
    <fullName>PLCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PLCategory</label>
    <referenceTo>Price_List_Item_Category__c</referenceTo>
    <relationshipLabel>Price List Items</relationshipLabel>
    <relationshipName>Price_List_Items</relationshipName>
    <type>Lookup</type>
</CustomField>