force-app/main/default/objects/Price_list_item__c/fields/Price_List_Item_Category__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Item_Category__c</fullName>
    <label>Price List Item Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>פעילות פנאי</fullName>
            </value>
            <value>
                <fullName>שכר דירה</fullName>
            </value>
            <value>
                <fullName>טיפולים משלימים</fullName>
            </value>
            <value>
                <fullName>לימודים</fullName>
            </value>
            <value>
                <fullName>ציוד רפואי</fullName>
            </value>
            <value>
                <fullName>ציוד טכנולוגי</fullName>
            </value>
            <value>
                <fullName>טיפול נפשי</fullName>
            </value>
            <value>
                <fullName>טיפול רפואי</fullName>
            </value>
            <value>
                <fullName>עזרה בבית</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>