force-app/main/default/objects/Price_list_item__c/fields/Rental_Contract_end_Date__c.field-meta.xml
<CustomField>
    <fullName>Rental_Contract_end_Date__c</fullName>
    <label>Rental Contract end Date</label>
    <type>Date</type>
</CustomField>